sidenav/svy-sidenav.css
/* Drilldown to second menu items */

.svy-sidenav {
	height: 100%;
	width: 100%;
	position: relative;
	background: white;
	word-break: break-word;
	border: 1px solid #e6e6e6;
	z-index: 999;
    -webkit-transition: transform cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.45s;
	   -moz-transition: transform cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.45s;
	    -ms-transition: transform cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.45s;
	     -o-transition: transform cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.45s;
  	        transition: transform cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.45s;
}

.svy-sidenav :focus {
	outline: none;
}

.svy-sidenav-header,
.svy-sidenav-content {
	width: 100%;
	position: relative;
	overflow: hidden;
	background: inherit;
	color: inherit;
	border-color: inherit;
}

/* Search field */
.svy-searchbox {
	display: none;
}

/* All Sub Menu */
.svy-sidenav-menu {
	display: none;
	color : #444;
}

.svy-sidenav-menu.svy-sidenav-collapsed {
	display: block;
}
/* Style list */
.svy-sidenav ul {
    margin-bottom: 0;
}

.svy-sidenav li {
	list-style-type: none;
	position: relative;
}

.svy-sidenav-main a {
	color: #777;
}

.svy-sidenav-menu {
	padding-left: 0px;
}

.svy-sidenav-menu ul {
    padding-left: 20px;
}

/* Style nav items */
.svy-sidenav-item {
	display: block;
	color: inherit;
	padding: 8px 15px;
	cursor: pointer;
	margin-right: 20px;
}

.svy-sidenav-item:focus,
.svy-sidenav-item:hover {
	text-decoration: none;
	color: inherit;
}

.svy-sidenav-item.sn-level-1 {
	font-size: 16px;
}

/* Active main list item */
.svy-navitem-selected {
	color: #2e6da4;
}

.svy-navitem-selected.sn-level-1 {
	border-left: 3px solid;
}

/* Collapse Icon */
.svy-sidenav-collapse-icon {
	padding: 8px;
    position: absolute;
    top: 0;
    right: 0;
    line-height: inherit;
}

/* Divider */
.svy-sidenav-divider {
	border-top: 1px solid #e6e6e6;
	margin-left: 15px;
    margin-right: 20px;
}

/* Disabled */
.svy-sidenav-disabled {
	
}

.svy-sidenav-disabled .svy-sidenav-menu,
.svy-navitem-disabled {
	color: #c6c6c6;
}

.svy-sidenav-disabled .svy-sidenav-item,
.svy-navitem-disabled .svy-sidenav-item {
	cursor: default;
}

/*******************************************
 * Animate 
 *
 *******************************************/

/* Animate nav */
.svy-slide-out {
	overflow: visible;
	border-width: 0px; /* reset the border of svy-sidenav */
	height: 0;
}

.svy-slide-out.svy-slide-out-add,
.svy-slide-out.svy-slide-out-remove {
	width: 100%;
	height: 100%;
	border-width: 1px;
}

.svy-slide-out .svy-sidenav-header {
	overflow: visible;
}

.svy-slide-out .svy-sidenav-content {
	display: none;
}

.svy-slide-out.svy-sidenav-left {
	border-right-width: 0;
	-webkit-transform: translate(-100%, 0);
     -moz-transform: translate(-100%, 0);
      -ms-transform: translate(-100%, 0);
       -o-transform: translate(-100%, 0);
          transform: translate(-100%, 0);
}

.svy-slide-out.svy-sidenav-right {
	border-left-width: 0;
	-webkit-transform: translate(100%, 0);
     -moz-transform: translate(100%, 0);
      -ms-transform: translate(100%, 0);
       -o-transform: translate(100%, 0);
          transform: translate(100%, 0);
}

.svy-slide-out.svy-sidenav-left .svy-sidenav-content {
	border: inherit;
	border-width: 0 1px 0 0;
}

.svy-slide-out.svy-sidenav-right .svy-sidenav-content {
	border: inherit;
	border-width: 0 0 0 1px;
}

.svy-slide-out.svy-slide-out-add .svy-sidenav-content,
.svy-slide-out.svy-slide-out-remove .svy-sidenav-content {
	display: block;
}

/* Nav header */
.svy-sidenav-action-open {
	float: left;
	padding: 8px;
	transition: inherit;
}

.svy-sidenav-left .svy-sidenav-action-open {
	float: right;
}

.svy-sidenav-static .svy-sidenav-action-open {
	display: none;
}

/* Animate nav header */
.svy-slide-out .svy-sidenav-action-open  {
	border: inherit;
	border-style: solid;
	border-width: 1px;
	margin-top: -1px;
}

.svy-slide-out.svy-sidenav-left .svy-sidenav-action-open {
	border-left-width: 0;
	-webkit-transform: translate(100%, 0);
     -moz-transform: translate(100%, 0);
      -ms-transform: translate(100%, 0);
       -o-transform: translate(100%, 0);
          transform: translate(100%, 0);
}

.svy-slide-out.svy-sidenav-right .svy-sidenav-action-open {
	border-right-width: 0;
	-webkit-transform: translate(-100%, 0);
     -moz-transform: translate(-100%, 0);
      -ms-transform: translate(-100%, 0);
       -o-transform: translate(-100%, 0);
          transform: translate(-100%, 0);
}

/* Animate collapsible menu items */
.svy-sidenav-menu.ng-enter, 
.svy-sidenav-menu.ng-leave {
	-webkit-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.35s;
	   -moz-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.35s;
	    -ms-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.35s;
	     -o-transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.35s;
  	        transition: all cubic-bezier(0.250, 0.460, 0.450, 0.940) 0.35s;
}

.svy-sidenav-menu.ng-enter,
.svy-sidenav-menu.ng-leave.ng-leave-active {
  	max-height: 0px;
  	overflow: hidden;
}

.svy-sidenav-menu.ng-leave,
.svy-sidenav-menu.ng-enter.ng-enter-active {
 	max-height: 200px;
 	overflow: hidden;
}

/* Side Toggle */

.nav-hide-toggle .svy-sidenav-action-open {
	display: none !important;
}

.nav-side-toggle .svy-sidenav-header {
	overflow: visible;
}

.nav-side-toggle .svy-sidenav-action-open {
	position: absolute;
	top: 0;
	background: inherit;
	border: inherit;
	border-style: solid;
	border-width: 1px;
	margin-top: -1px;
}

.nav-side-toggle.svy-sidenav-left .svy-sidenav-action-open {
	border-left-width: 0;
	right: 0;
	-webkit-transform: translate(100%, 0);
     -moz-transform: translate(100%, 0);
      -ms-transform: translate(100%, 0);
       -o-transform: translate(100%, 0);
          transform: translate(100%, 0);
}

.nav-side-toggle.svy-sidenav-right .svy-sidenav-action-open {
	border-right-width: 0;
	left: 0;
	-webkit-transform: translate(-100%, 0);
     -moz-transform: translate(-100%, 0);
      -ms-transform: translate(-100%, 0);
       -o-transform: translate(-100%, 0);
          transform: translate(-100%, 0);
}

